--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "react-to-print": "^2.5.0",
     "react-verification-code-input": "^1.2.2"
   },
   "scripts": {
