--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
-    "react-to-print": "^2.5.0",
-    "react-verification-code-input": "^1.2.2"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
